lib/ffi/ffi_webgpu.dart


  late final __get_FMA3_enablePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('_get_FMA3_enable');
  late final __get_FMA3_enable =
      __get_FMA3_enablePtr.asFunction<int Function()>();

  double acosf(
    double _X,
  ) {
    return _acosf(
      _X,
    );
  }

  late final _acosfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('acosf');
  late final _acosf = _acosfPtr.asFunction<double Function(double)>();

  double asinf(
    double _X,
  ) {
    return _asinf(
      _X,
    );
  }

  late final _asinfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('asinf');
  late final _asinf = _asinfPtr.asFunction<double Function(double)>();

  double atan2f(
    double _Y,
    double _X,
  ) {
    return _atan2f(
      _Y,
      _X,
    );
  }

  late final _atan2fPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float, ffi.Float)>>(
          'atan2f');
  late final _atan2f = _atan2fPtr.asFunction<double Function(double, double)>();

  double atanf(
    double _X,
  ) {
    return _atanf(
      _X,
    );
  }

  late final _atanfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('atanf');
  late final _atanf = _atanfPtr.asFunction<double Function(double)>();

  double ceilf(
    double _X,
  ) {
    return _ceilf(
      _X,
    );
  }

  late final _ceilfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('ceilf');
  late final _ceilf = _ceilfPtr.asFunction<double Function(double)>();

  double cosf(
    double _X,
  ) {
    return _cosf(
      _X,
    );
  }

  late final _cosfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('cosf');
  late final _cosf = _cosfPtr.asFunction<double Function(double)>();

  double coshf(
    double _X,
  ) {
    return _coshf(
      _X,
    );
  }

  late final _coshfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('coshf');
  late final _coshf = _coshfPtr.asFunction<double Function(double)>();

  double expf(
    double _X,
  ) {
    return _expf(
      _X,
    );
  }

  late final _expfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('expf');
  late final _expf = _expfPtr.asFunction<double Function(double)>();

  double floorf(
    double _X,
  ) {
    return _floorf(
      _X,
    );
  }

  late final _floorfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('floorf');
  late final _floorf = _floorfPtr.asFunction<double Function(double)>();

  double fmodf(
    double _X,
    double _Y,
  ) {
    return _fmodf(
      _X,
      _Y,
    );
  }

  late final _fmodfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float, ffi.Float)>>(
          'fmodf');
  late final _fmodf = _fmodfPtr.asFunction<double Function(double, double)>();

  double log10f(
    double _X,
  ) {
    return _log10f(
      _X,
    );
  }

  late final _log10fPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('log10f');
  late final _log10f = _log10fPtr.asFunction<double Function(double)>();

  double logf(
    double _X,
  ) {
    return _logf(
      _X,
    );
  }

  late final _logfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('logf');
  late final _logf = _logfPtr.asFunction<double Function(double)>();

  double modff(
    double _X,
    ffi.Pointer<ffi.Float> _Y,
  ) {
    return _modff(
      _X,
      _Y,
    );
  }

  late final _modffPtr = _lookup<
      ffi.NativeFunction<
          ffi.Float Function(ffi.Float, ffi.Pointer<ffi.Float>)>>('modff');
  late final _modff =
      _modffPtr.asFunction<double Function(double, ffi.Pointer<ffi.Float>)>();

  double powf(
    double _X,
    double _Y,
  ) {
    return _powf(
      _X,
      _Y,
    );
  }

  late final _powfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float, ffi.Float)>>(
          'powf');
  late final _powf = _powfPtr.asFunction<double Function(double, double)>();

  double sinf(
    double _X,
  ) {
    return _sinf(
      _X,
    );
  }

  late final _sinfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('sinf');
  late final _sinf = _sinfPtr.asFunction<double Function(double)>();

  double sinhf(
    double _X,
  ) {
    return _sinhf(
      _X,
    );
  }

  late final _sinhfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('sinhf');
  late final _sinhf = _sinhfPtr.asFunction<double Function(double)>();

  double sqrtf(
    double _X,
  ) {
    return _sqrtf(
      _X,
    );
  }

  late final _sqrtfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('sqrtf');
  late final _sqrtf = _sqrtfPtr.asFunction<double Function(double)>();

  double tanf(
    double _X,
  ) {
    return _tanf(
      _X,
    );
  }

  late final _tanfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('tanf');
  late final _tanf = _tanfPtr.asFunction<double Function(double)>();

  double tanhf(
    double _X,
  ) {
    return _tanhf(
      _X,
    );
  }

  late final _tanhfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('tanhf');
  late final _tanhf = _tanhfPtr.asFunction<double Function(double)>();

  late final ffi.Pointer<ffi.Double> _HUGE1 = _lookup<ffi.Double>('HUGE');

  double get HUGE => _HUGE1.value;

  set HUGE(double value) => _HUGE1.value = value;

  double j0(
    double _X,
  ) {
    return _j01(
      _X,
    );
  }

  late final _j0Ptr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>('j0');
  late final _j01 = _j0Ptr.asFunction<double Function(double)>();

  double j1(
    double _X,
  ) {
    return _j11(
      _X,
    );
  }

  late final _j1Ptr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>('j1');
  late final _j11 = _j1Ptr.asFunction<double Function(double)>();

  double jn(
    int _X,
    double _Y,
  ) {
    return _jn1(
      _X,
      _Y,
    );
  }

  late final _jnPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Int, ffi.Double)>>(
          'jn');
  late final _jn1 = _jnPtr.asFunction<double Function(int, double)>();

  double y0(
    double _X,
  ) {
    return _y01(
      _X,
    );
  }

  late final _y0Ptr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>('y0');
  late final _y01 = _y0Ptr.asFunction<double Function(double)>();

  double y1(
    double _X,
  ) {
    return _y11(
      _X,
    );
  }

  late final _y1Ptr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>('y1');
  late final _y11 = _y1Ptr.asFunction<double Function(double)>();

  double yn(
    int _X,
    double _Y,
  ) {
    return _yn1(
      _X,
      _Y,
    );
  }

  late final _ynPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Int, ffi.Double)>>(
          'yn');
  late final _yn1 = _ynPtr.asFunction<double Function(int, double)>();

  int wgpu_get_num_live_objects() {
    return _wgpu_get_num_live_objects();
  }

  late final _wgpu_get_num_live_objectsPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
          'wgpu_get_num_live_objects');
  late final _wgpu_get_num_live_objects =
      _wgpu_get_num_live_objectsPtr.asFunction<int Function()>();

  void wgpu_object_destroy(
    WGpuObjectBase wgpuObject,
  ) {
    return _wgpu_object_destroy(
      wgpuObject,
    );
  }

  late final _wgpu_object_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WGpuObjectBase)>>(
          'wgpu_object_destroy');
  late final _wgpu_object_destroy =
      _wgpu_object_destroyPtr.asFunction<void Function(WGpuObjectBase)>();

  void wgpu_destroy_all_objects() {
    return _wgpu_destroy_all_objects();
  }

  late final _wgpu_destroy_all_objectsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'wgpu_destroy_all_objects');
  late final _wgpu_destroy_all_objects =
      _wgpu_destroy_all_objectsPtr.asFunction<void Function()>();

  WGpuCanvasContext wgpu_canvas_get_webgpu_context(
    ffi.Pointer<ffi.Void> hwnd,
  ) {
    return _wgpu_canvas_get_webgpu_context(
      hwnd,
    );
  }

  late final _wgpu_canvas_get_webgpu_contextPtr = _lookup<
          ffi
          .NativeFunction<WGpuCanvasContext Function(ffi.Pointer<ffi.Void>)>>(
      'wgpu_canvas_get_webgpu_context');
  late final _wgpu_canvas_get_webgpu_context =
      _wgpu_canvas_get_webgpu_contextPtr
          .asFunction<WGpuCanvasContext Function(ffi.Pointer<ffi.Void>)>();

  int wgpu_is_valid_object(
    WGpuObjectBase obj,
  ) {
    return _wgpu_is_valid_object(
      obj,
    );
  }

  late final _wgpu_is_valid_objectPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_valid_object');
  late final _wgpu_is_valid_object =
      _wgpu_is_valid_objectPtr.asFunction<int Function(WGpuObjectBase)>();

  void wgpu_object_set_label(
    WGpuObjectBase obj,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _wgpu_object_set_label(
      obj,
      label,
    );
  }

  late final _wgpu_object_set_labelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuObjectBase, ffi.Pointer<ffi.Char>)>>('wgpu_object_set_label');
  late final _wgpu_object_set_label = _wgpu_object_set_labelPtr
      .asFunction<void Function(WGpuObjectBase, ffi.Pointer<ffi.Char>)>();

  int wgpu_object_get_label(
    WGpuObjectBase obj,
    ffi.Pointer<ffi.Char> dstLabel,
    int dstLabelSize,
  ) {
    return _wgpu_object_get_label(
      obj,
      dstLabel,
      dstLabelSize,
    );
  }

  late final _wgpu_object_get_labelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(WGpuObjectBase, ffi.Pointer<ffi.Char>,
              ffi.Uint32)>>('wgpu_object_get_label');
  late final _wgpu_object_get_label = _wgpu_object_get_labelPtr
      .asFunction<int Function(WGpuObjectBase, ffi.Pointer<ffi.Char>, int)>();

  late final ffi.Pointer<WGpuExtent3D> _WGPU_EXTENT_3D_DEFAULT_INITIALIZER =
      _lookup<WGpuExtent3D>('WGPU_EXTENT_3D_DEFAULT_INITIALIZER');

  WGpuExtent3D get WGPU_EXTENT_3D_DEFAULT_INITIALIZER =>
      _WGPU_EXTENT_3D_DEFAULT_INITIALIZER.ref;

  int navigator_gpu_available() {
    return _navigator_gpu_available();
  }

  late final _navigator_gpu_availablePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'navigator_gpu_available');
  late final _navigator_gpu_available =
      _navigator_gpu_availablePtr.asFunction<int Function()>();

  void navigator_delete_webgpu_api_access() {
    return _navigator_delete_webgpu_api_access();
  }

  late final _navigator_delete_webgpu_api_accessPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'navigator_delete_webgpu_api_access');
  late final _navigator_delete_webgpu_api_access =
      _navigator_delete_webgpu_api_accessPtr.asFunction<void Function()>();

  int wgpu_sync_operations_pending() {
    return _wgpu_sync_operations_pending();
  }

  late final _wgpu_sync_operations_pendingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'wgpu_sync_operations_pending');
  late final _wgpu_sync_operations_pending =
      _wgpu_sync_operations_pendingPtr.asFunction<int Function()>();

  void wgpu_request_animation_frame_loop(
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Int Function(
                    ffi.Double time, ffi.Pointer<ffi.Void> userData)>>
        callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _wgpu_request_animation_frame_loop(
      callback,
      userData,
    );
  }
